--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -2,7 +2,7 @@ name: Update
 
 on:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: "0 2 * * *"
 
   workflow_dispatch:
 
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-        
+
       - id: check
         run: |
           UPSTREAM_VERSION=$(curl -s https://api.github.com/repos/stephencelis/SQLite.swift/releases/latest | grep tag_name | cut -d '"' -f 4)
@@ -46,7 +46,7 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0'
+          ruby-version: "3.0"
           bundler-cache: true
 
       - name: Prepare
@@ -54,25 +54,28 @@ jobs:
 
       - name: Build iOS
         run: ./archive.sh "${{ needs.check.outputs.version }}" "iOS"
-        
+
       - name: Build tvOS
         run: ./archive.sh "${{ needs.check.outputs.version }}" "tvOS"
-        
+
       - name: Build macOS
         run: ./archive.sh "${{ needs.check.outputs.version }}" "macOS"
-        
+
+      - name: Build macCatalyst
+        run: ./archive.sh "${{ needs.check.outputs.version }}" "macCatalyst"
+
       - name: Build watchOS
         run: ./archive.sh "${{ needs.check.outputs.version }}" "watchOS"
-        
+
       - name: Create xcframework
         run: ./create_xcframework.sh
-        
+
       - name: Upload SQLite.xcframework.zip
         uses: actions/upload-artifact@v3
         with:
           name: sqlite
           path: ./build/SQLite.xcframework.zip
-        
+
       - name: Upload SQLCipher.xcframework.zip
         uses: actions/upload-artifact@v3
         with:
